--- a/AustralianWeather/manifest.json
+++ b/AustralianWeather/manifest.json
@@ -202,6 +202,29 @@
         "Archs": "x64"
       }
     },
+    "Rttf2pt1": {
+      "Source": "CRAN",
+      "Repository": "https://cran.rstudio.com",
+      "description": {
+        "Package": "Rttf2pt1",
+        "Title": "'ttf2pt1' Program",
+        "Version": "1.3.12",
+        "Author": "Winston Chang,\n    Andrew Weeks,\n    Frank M. Siegert,\n    Mark Heath,\n    Thomas Henlick,\n    Sergey Babkin,\n    Turgut Uyar,\n    Rihardas Hepas,\n    Szalay Tamas,\n    Johan Vromans,\n    Petr Titera,\n    Lei Wang,\n    Chen Xiangyang,\n    Zvezdan Petkovic,\n    Rigel,\n    I. Lee Hetherington",
+        "Maintainer": "Winston Chang <winston@stdout.org>",
+        "Description": "Contains the program 'ttf2pt1', for use with the\n    'extrafont' package. This product includes software developed by the 'TTF2PT1'\n    Project and its contributors.",
+        "Depends": "R (>= 2.15)",
+        "License": "file LICENSE",
+        "URL": "https://github.com/wch/Rttf2pt1",
+        "Encoding": "UTF-8",
+        "RoxygenNote": "7.2.3",
+        "NeedsCompilation": "yes",
+        "Packaged": "2023-01-21 03:30:04 UTC; winston",
+        "License_is_FOSS": "yes",
+        "Repository": "CRAN",
+        "Date/Publication": "2023-01-22 21:40:13 UTC",
+        "Built": "R 4.4.0; x86_64-w64-mingw32; 2024-04-23 00:28:44 UTC; windows"
+      }
+    },
     "askpass": {
       "Source": "CRAN",
       "Repository": "https://cran.rstudio.com",
@@ -945,6 +968,49 @@
         "Built": "R 4.4.2; ; 2024-12-08 01:27:59 UTC; windows"
       }
     },
+    "extrafont": {
+      "Source": "CRAN",
+      "Repository": "https://cran.rstudio.com",
+      "description": {
+        "Package": "extrafont",
+        "Title": "Tools for Using Fonts",
+        "Version": "0.19",
+        "Author": "Winston Chang <winston@stdout.org>",
+        "Maintainer": "Winston Chang <winston@stdout.org>",
+        "Description": "Tools to using fonts other than the standard PostScript fonts.\n    This package makes it easy to use system TrueType fonts and with PDF or\n    PostScript output files, and with bitmap output files in Windows. extrafont\n    can also be used with fonts packaged specifically to be used with, such as\n    the fontcm package, which has Computer Modern PostScript fonts with math\n    symbols.",
+        "Depends": "R (>= 2.15)",
+        "Imports": "extrafontdb, grDevices, utils, Rttf2pt1",
+        "Suggests": "fontcm",
+        "License": "GPL-2",
+        "URL": "https://github.com/wch/extrafont",
+        "RoxygenNote": "7.1.2",
+        "NeedsCompilation": "no",
+        "Packaged": "2023-01-18 02:47:05 UTC; winston",
+        "Repository": "CRAN",
+        "Date/Publication": "2023-01-18 08:40:12 UTC",
+        "Built": "R 4.4.0; ; 2024-04-23 01:17:34 UTC; windows"
+      }
+    },
+    "extrafontdb": {
+      "Source": "CRAN",
+      "Repository": "https://cran.rstudio.com",
+      "description": {
+        "Package": "extrafontdb",
+        "Title": "Package for holding the database for the extrafont package",
+        "Version": "1.0",
+        "Author": "Winston Chang <winston@stdout.org>",
+        "Maintainer": "Winston Chang <winston@stdout.org>",
+        "Description": "Package for holding the database for the extrafont package",
+        "Depends": "R (>= 2.14)",
+        "License": "GPL-2",
+        "URL": "https://github.com/wch/extrafontdb",
+        "Collate": "'extrafontdb.r'",
+        "Packaged": "2012-06-04 19:39:09 UTC; winston",
+        "Repository": "CRAN",
+        "Date/Publication": "2012-06-11 15:40:11",
+        "Built": "R 4.4.0; ; 2024-04-23 00:28:43 UTC; windows"
+      }
+    },
     "fansi": {
       "Source": "CRAN",
       "Repository": "https://cran.rstudio.com",
@@ -1026,6 +1092,54 @@
         "Archs": "x64"
       }
     },
+    "fontBitstreamVera": {
+      "Source": "CRAN",
+      "Repository": "https://cran.rstudio.com",
+      "description": {
+        "Package": "fontBitstreamVera",
+        "Title": "Fonts with 'Bitstream Vera Fonts' License",
+        "Version": "0.1.1",
+        "Authors@R": "c(\n    person(\"Lionel\", \"Henry\", , \"lionel.hry@gmail.com\", c(\"cre\", \"aut\")),\n    person(\"Bitstream\", role = \"cph\"))",
+        "Description": "Provides fonts licensed under the 'Bitstream Vera Fonts'\n    license for the 'fontquiver' package.",
+        "Depends": "R (>= 3.0.0)",
+        "License": "file LICENCE",
+        "Encoding": "UTF-8",
+        "LazyData": "true",
+        "RoxygenNote": "5.0.1",
+        "NeedsCompilation": "no",
+        "Packaged": "2017-01-31 20:03:43 UTC; lionel",
+        "Author": "Lionel Henry [cre, aut],\n  Bitstream [cph]",
+        "Maintainer": "Lionel Henry <lionel.hry@gmail.com>",
+        "License_is_FOSS": "yes",
+        "Repository": "CRAN",
+        "Date/Publication": "2017-02-01 00:53:34",
+        "Built": "R 4.4.0; ; 2024-04-23 00:26:20 UTC; windows"
+      }
+    },
+    "fontLiberation": {
+      "Source": "CRAN",
+      "Repository": "https://cran.rstudio.com",
+      "description": {
+        "Package": "fontLiberation",
+        "Title": "Liberation Fonts",
+        "Version": "0.1.0",
+        "Authors@R": "c(\n    person(\"Lionel\", \"Henry\", , \"lionel@rstudio.com\", \"cre\"),\n    person(\"Pravin Satpute\", role = \"aut\"),\n    person(\"Steve Matteson\", role = \"aut\"),\n    person(\"Red Hat, Inc\", role = \"cph\"),\n    person(\"Google Corporation\", role = \"cph\"))",
+        "Description": "A placeholder for the Liberation fontset intended for the\n    `fontquiver` package. This fontset covers the 12 combinations of\n    families (sans, serif, mono) and faces (plain, bold, italic, bold\n    italic) supported in R graphics devices.",
+        "Depends": "R (>= 3.0)",
+        "License": "file LICENSE",
+        "Encoding": "UTF-8",
+        "LazyData": "true",
+        "RoxygenNote": "5.0.1",
+        "NeedsCompilation": "no",
+        "Packaged": "2016-10-14 14:21:59 UTC; lionel",
+        "Author": "Lionel Henry [cre],\n  Pravin Satpute [aut],\n  Steve Matteson [aut],\n  Red Hat, Inc [cph],\n  Google Corporation [cph]",
+        "Maintainer": "Lionel Henry <lionel@rstudio.com>",
+        "Repository": "CRAN",
+        "Date/Publication": "2016-10-15 11:24:18",
+        "License_is_FOSS": "yes",
+        "Built": "R 4.4.0; ; 2024-04-23 00:26:19 UTC; windows"
+      }
+    },
     "fontawesome": {
       "Source": "CRAN",
       "Repository": "https://cran.rstudio.com",
@@ -1053,6 +1167,32 @@
         "Repository": "CRAN",
         "Date/Publication": "2023-08-19 04:52:40 UTC",
         "Built": "R 4.4.1; ; 2024-07-09 01:24:05 UTC; windows"
+      }
+    },
+    "fontquiver": {
+      "Source": "CRAN",
+      "Repository": "https://cran.rstudio.com",
+      "description": {
+        "Package": "fontquiver",
+        "Title": "Set of Installed Fonts",
+        "Version": "0.2.1",
+        "Authors@R": "c(\n    person(\"Lionel\", \"Henry\", , \"lionel@rstudio.com\", c(\"cre\", \"aut\")),\n    person(\"RStudio\", role = \"cph\"),\n    person(\"George Douros\", role = \"cph\", comment = \"Symbola font\"))",
+        "Description": "Provides a set of fonts with permissive licences. This is\n    useful when you want to avoid system fonts to make sure your\n    outputs are reproducible.",
+        "Depends": "R (>= 3.0.0)",
+        "Imports": "fontBitstreamVera (>= 0.1.0), fontLiberation (>= 0.1.0)",
+        "Suggests": "testthat, htmltools",
+        "License": "GPL-3 | file LICENSE",
+        "Encoding": "UTF-8",
+        "LazyData": "true",
+        "RoxygenNote": "5.0.1",
+        "Collate": "'font-getters.R' 'fontset.R' 'fontset-bitstream-vera.R'\n'fontset-dejavu.R' 'fontset-liberation.R' 'fontset-symbola.R'\n'html-dependency.R' 'utils.R'",
+        "NeedsCompilation": "no",
+        "Packaged": "2017-01-31 20:11:24 UTC; lionel",
+        "Author": "Lionel Henry [cre, aut],\n  RStudio [cph],\n  George Douros [cph] (Symbola font)",
+        "Maintainer": "Lionel Henry <lionel@rstudio.com>",
+        "Repository": "CRAN",
+        "Date/Publication": "2017-02-01 00:52:56",
+        "Built": "R 4.4.2; ; 2024-12-08 01:31:47 UTC; windows"
       }
     },
     "forcats": {
@@ -1147,6 +1287,35 @@
         "Repository": "CRAN",
         "Date/Publication": "2023-07-20 18:50:08 UTC",
         "Built": "R 4.4.1; ; 2024-08-02 01:45:05 UTC; windows"
+      }
+    },
+    "gdtools": {
+      "Source": "CRAN",
+      "Repository": "https://cran.rstudio.com",
+      "description": {
+        "Package": "gdtools",
+        "Title": "Utilities for Graphical Rendering and Fonts Management",
+        "Version": "0.4.1",
+        "Authors@R": "c(\n    person(\"David\", \"Gohel\", , \"david.gohel@ardata.fr\", role = c(\"aut\", \"cre\")),\n    person(\"Hadley\", \"Wickham\", , \"hadley@rstudio.com\", role = \"aut\"),\n    person(\"Lionel\", \"Henry\", , \"lionel@rstudio.com\", role = \"aut\"),\n    person(\"Jeroen\", \"Ooms\", , \"jeroen@berkeley.edu\", role = \"aut\",\n           comment = c(ORCID = \"0000-0002-4035-0289\")),\n    person(\"Yixuan\", \"Qiu\", role = \"ctb\"),\n    person(\"R Core Team\", role = \"cph\",\n           comment = \"Cairo code from X11 device\"),\n    person(\"ArData\", role = \"cph\"),\n    person(\"RStudio\", role = \"cph\")\n  )",
+        "Description": "Tools are provided to compute metrics of formatted strings\n    and to check the availability of a font.  Another set of functions is\n    provided to support the collection of fonts from 'Google Fonts' in a\n    cache. Their use is simple within 'R Markdown' documents and 'shiny'\n    applications but also with graphic productions generated with the\n    'ggiraph', 'ragg' and 'svglite' packages or with tabular productions\n    from the 'flextable' package.",
+        "License": "GPL-3 | file LICENSE",
+        "URL": "https://davidgohel.github.io/gdtools/",
+        "BugReports": "https://github.com/davidgohel/gdtools/issues",
+        "Depends": "R (>= 4.0.0)",
+        "Imports": "fontquiver (>= 0.2.0), htmltools, Rcpp (>= 0.12.12),\nsystemfonts (>= 1.1.0), tools",
+        "Suggests": "curl, gfonts, methods, testthat",
+        "LinkingTo": "Rcpp",
+        "Encoding": "UTF-8",
+        "RoxygenNote": "7.3.2",
+        "SystemRequirements": "cairo, freetype2, fontconfig",
+        "NeedsCompilation": "yes",
+        "Packaged": "2024-11-04 08:32:53 UTC; davidgohel",
+        "Author": "David Gohel [aut, cre],\n  Hadley Wickham [aut],\n  Lionel Henry [aut],\n  Jeroen Ooms [aut] (<https://orcid.org/0000-0002-4035-0289>),\n  Yixuan Qiu [ctb],\n  R Core Team [cph] (Cairo code from X11 device),\n  ArData [cph],\n  RStudio [cph]",
+        "Maintainer": "David Gohel <david.gohel@ardata.fr>",
+        "Repository": "CRAN",
+        "Date/Publication": "2024-11-04 09:30:02 UTC",
+        "Built": "R 4.4.2; x86_64-w64-mingw32; 2024-12-08 02:26:00 UTC; windows",
+        "Archs": "x64"
       }
     },
     "generics": {
@@ -1470,6 +1639,33 @@
         "Repository": "CRAN",
         "Date/Publication": "2023-03-21 18:10:02 UTC",
         "Built": "R 4.4.1; ; 2024-08-02 01:44:34 UTC; windows"
+      }
+    },
+    "hrbrthemes": {
+      "Source": "CRAN",
+      "Repository": "https://cran.rstudio.com",
+      "description": {
+        "Package": "hrbrthemes",
+        "Type": "Package",
+        "Title": "Additional Themes, Theme Components and Utilities for 'ggplot2'",
+        "Version": "0.8.7",
+        "Date": "2024-03-03",
+        "Authors@R": "c(\n      person(\"Bob\", \"Rudis\", email = \"bob@rud.is\", role = c(\"aut\", \"cre\"), \n             comment = c(ORCID = \"0000-0001-5670-2640\")),\n      person(\"Patrick\", \"Kennedy\", role=c(\"ctb\")),\n      person(\"Philipp\", \"Reiner\", role = c(\"ctb\")),\n      person(\"Dan\", \"Wilson\", email = \"dan@thedatacollective.com.au\", \n             role = c(\"ctb\"), comment = c(\"Secondary axis support\")), \n      person(\"Xavier\", \"Adam\", role = c(\"ctb\")),\n      person(\"Google\", comment = \"Roboto Condensed\", role = c(\"cph\")),\n      person(\"IBM\", comment = \"Plex Sans Font\", role = c(\"cph\")),\n      person(\"Goldman Sachs\", comment = \"Goldman Sans Font\", role = c(\"cph\")),\n      person(\"Impallari Type\", comment = \"Public Sans Font\", role = c(\"cph\")),\n      person(\"Jacob\", \"Barnett\", email = \"jacob.r.barnett@gmail.com\", role = c(\"ctb\")),\n      person(\"Thomas J.\", \"Leeper\", role = c(\"ctb\"), email = \"thosjleeper@gmail.com\",\n             comment = c(ORCID = \"0000-0003-4097-6326\")),\n      person(\"Joris\", \"Meys\", email = \"Joris.Meys@UGent.be\", role = c(\"ctb\"))\n    )",
+        "Maintainer": "Bob Rudis <bob@rud.is>",
+        "Description": "A compilation of extra 'ggplot2' themes, scales and utilities, including a \n    spell check function for plot label fields and an overall emphasis on typography. \n    A copy of the 'Google' font 'Roboto Condensed' is also included.",
+        "Copyright": "file inst/COPYRIGHTS",
+        "License": "MIT + file LICENSE",
+        "Encoding": "UTF-8",
+        "Suggests": "testthat, dplyr, gridExtra, hunspell, stringi, gcookbook,\nclipr, vdiffr, svglite",
+        "Depends": "R (>= 4.0.0)",
+        "Imports": "ggplot2 (>= 3.4.0), grDevices, grid, scales, extrafont, tools,\nmagrittr, gdtools, utils",
+        "RoxygenNote": "7.2.3",
+        "NeedsCompilation": "no",
+        "Packaged": "2024-03-03 11:07:16 UTC; hrbrmstr",
+        "Author": "Bob Rudis [aut, cre] (<https://orcid.org/0000-0001-5670-2640>),\n  Patrick Kennedy [ctb],\n  Philipp Reiner [ctb],\n  Dan Wilson [ctb] (Secondary axis support),\n  Xavier Adam [ctb],\n  Google [cph] (Roboto Condensed),\n  IBM [cph] (Plex Sans Font),\n  Goldman Sachs [cph] (Goldman Sans Font),\n  Impallari Type [cph] (Public Sans Font),\n  Jacob Barnett [ctb],\n  Thomas J. Leeper [ctb] (<https://orcid.org/0000-0003-4097-6326>),\n  Joris Meys [ctb]",
+        "Repository": "CRAN",
+        "Date/Publication": "2024-03-04 00:20:02 UTC",
+        "Built": "R 4.4.2; ; 2024-12-08 03:00:13 UTC; windows"
       }
     },
     "htmltools": {
@@ -3542,7 +3738,7 @@
       "checksum": "8e54272dbd51f7dad71e8e29cc83dc47"
     },
     "app.R": {
-      "checksum": "5ecbd5c42ae1c7c1b16d616573e3d44e"
+      "checksum": "0424a4716f37bd56d19eecc2f9b90dd6"
     },
     "australian_weather_202412281334.csv": {
       "checksum": "07b188b963ad7253fc0da5d769eb36f6"
@@ -3557,16 +3753,19 @@
       "checksum": "cd0dd2e87ffc34b512655d65510e2f50"
     },
     "README.md": {
-      "checksum": "46729624bdc388c82d4d9a351e076c01"
+      "checksum": "1159e7f835499458fac81d03304c0c0a"
     },
     "report.Rmd": {
-      "checksum": "00f8f12e1afb719f1d401e5e7b1ac8a1"
+      "checksum": "7c7b17109fb15429e1f0bc77505823b5"
     },
     "reportdf.Rmd": {
       "checksum": "c016b2efdc39197b7851323ebeea880d"
     },
     "screen_app.png": {
       "checksum": "6a20131e289173dfd81aeac978c5d983"
+    },
+    "screep_app2.png": {
+      "checksum": "099b0edfc715fa24edb5a50c39857a3a"
     }
   },
   "users": null
